--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -14,3 +14,7 @@ scenes=["res://src/screens/Main.tscn"]
 [linked_properties]
 
 Node2D:scale=true
+
+[dialog_bounds]
+
+project_settings=Rect2(510, 190, 900, 700)
